--- a/package.json
+++ b/package.json
@@ -1,23 +1,51 @@
 {
-  "name": "js-sandbox",
-  "version": "1.0.0",
-  "description": "This sandbox repo is currently configured as a form validation tool, using [Lookoutjs](https://github.com/estrattonbailey/lookoutjs) and native getters/setters.",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "name": "barrel-shopify-base",
+  "version": "0.0.1",
+  "description": "",
+  "main": "gulpfile.js",
+  "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/estrattonbailey/js-sandbox.git"
+    "url": "git+ssh://git@gitlab.com:barrel/barrel-shopify-base.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Barrel, LLC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/estrattonbailey/js-sandbox/issues"
+    "url": "https://gitlab.com/barrel/barrel-shopify-base/issues"
   },
-  "homepage": "https://github.com/estrattonbailey/js-sandbox#readme",
-  "dependencies": {
-    "delegate": "^3.0.1",
-    "sektor": "^1.1.4"
-  }
+  "homepage": "https://gitlab.com/barrel/barrel-shopify-base#README",
+  "devDependencies": {
+    "autoprefixer": "^6.3.1",
+    "browserify": "^12.0.2",
+    "browserify-shim": "^3.8.12",
+    "del": "^2.2.0",
+    "delete": "^0.3.0",
+    "glob": "^7.0.3",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-copy": "0.0.2",
+    "gulp-file": "^0.2.0",
+    "gulp-flatten": "^0.2.0",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jshint": "^2.0.0",
+    "gulp-postcss": "^6.0.1",
+    "gulp-prettify": "^0.4.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.2.0",
+    "gulp-shell": "^0.5.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-util": "^3.0.7",
+    "gulp-wrapper": "^1.0.0",
+    "inquirer": "^1.0.0",
+    "jshint": "^2.9.1",
+    "minifyify": "^7.2.1",
+    "pretty-hrtime": "^1.0.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
+    "yamljs": "^0.2.7"
+  },
+  "dependencies": {},
+  "browser": {},
+  "browserify-shim": {}
 }
